--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
     <!-- css link end -->
 </head>
 <body>
-    <h1></h1>
+    <!-- header section -->
+    <h1 class="container text-center mt-5 api">API Introduction & <span class="color">Es6 Introduction</span></h1>
+
+    <!-- search section start -->
+    <section>
+      <div class="container">
+        <div class="input-group w-50 mx-auto mt-5">
+            <input id="input-filed" type="text" class="form-control" placeholder="Search Mobile Name" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button onclick="phoneHunter()" class="btn btn-outline-secondary" type="button">search</button>
+          </div>
+      </div>
+    </section>
+      <!-- search section end -->
+
 
 
 
