--- a/index.html
+++ b/index.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignmant-6</title>
-    <!-- bootstrap link start -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- bootstrap link end -->
-    <!-- css link start -->
-    <link rel="stylesheet" href="style.css">
-    <!-- css link end -->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Assignmant-6</title>
+  <!-- bootstrap link start -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- bootstrap link end -->
+  <!-- css link start -->
+  <link rel="stylesheet" href="style.css">
+  <!-- css link end -->
 </head>
-<body>
-    <!-- header section -->
-    <h1 class="container text-center mt-5 api">API Introduction & <span class="color">Es6 Introduction</span></h1>
 
-    <!-- search section start -->
-    <section>
-      <div class="container">
-        <div class="input-group w-50 mx-auto mt-5">
-            <input id="input-filed" type="text" class="form-control" placeholder="Search Mobile Name" aria-label="Recipient's username" aria-describedby="button-addon2">
-            <button onclick="phoneHunter()" class="btn btn-outline-secondary" type="button">search</button>
-          </div>
+<body class="container">
+  <!-- header section -->
+  <h1 class="container text-center mt-5 api">API Introduction & <span class="color">Es6 Introduction</span></h1>
+
+  <!-- search section start -->
+  <section>
+    <div class="container">
+      <div class="input-group w-50 mx-auto mt-5">
+        <input id="input-filed" type="text" class="form-control" placeholder="Search Mobile Name"
+          aria-label="Recipient's username" aria-describedby="button-addon2">
+        <button onclick="phoneHunter()" class="btn btn-outline-secondary" type="button">search</button>
       </div>
-    </section>
-      <!-- search section end -->
+    </div>
+  </section>
+  <!-- search section end -->
+  
+  <div id="main" class="row justify-content-md-center ">
     
+    
+  </div>
 
 
 
@@ -44,8 +52,7 @@
 
 
 
-
-
-    <script src="app.js"></script>
+  <script src="app.js"></script>
 </body>
+
 </html>
