--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
 <body class="container">
   <!-- header section -->
-  <h1 class="container text-center mt-5 api">API Introduction & <span class="color">Es6 Introduction</span></h1>
+  
 
   <!-- search section start -->
   <section>
-    <div class="container">
-      <div class="input-group w-50 mx-auto mt-5">
+    <div>
+      <div class="input-group w-50 mx-auto mt-md-5">
         <input id="input-filed" type="text" class="form-control" placeholder="Search Mobile Name"
           aria-label="Recipient's username" aria-describedby="button-addon2">
         <button onclick="phoneHunter()" class="btn btn-outline-secondary" type="button">search</button>
@@ -31,8 +31,7 @@
   </section>
   <!-- search section end -->
   
-  <div id="main" class="row justify-content-md-center ">
-    
+  <div id="main">
     
   </div>
 
@@ -51,8 +50,10 @@
 
 
 
-
   <script src="app.js"></script>
+<!-- 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
 </body>
 
 </html>
+
